[gd_scene load_steps=21 format=2]

[ext_resource path="res://ui/menu_env.tres" type="Environment" id=1]
[ext_resource path="res://ui/buttons/continue_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/buttons/exit_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://maps/hub_1.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/title_screen.gd" type="Script" id=5]
[ext_resource path="res://assets/logo.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/montserrat_extra_bold_24.tres" type="DynamicFont" id=7]
[ext_resource path="res://ui/buttons/options_button.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/buttons/new_game_button.tscn" type="PackedScene" id=10]
[ext_resource path="res://entities/player/player.glb" type="PackedScene" id=11]
[ext_resource path="res://props/spaceship/spaceship.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "menu_fade_in"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "menu_fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("WorldEnvironment:environment:background_sky_rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -360, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Spaceship:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spaceship:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 5, 3.2, 9.3 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "coming_in"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Spaceship:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.501, 1, 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -25, 0, 0 ), Vector3( -25, 0, 0 ), Vector3( -25, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 15, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spaceship:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 5, 3.2, 30.3181 ), Vector3( 5, 3.2, 30.3181 ), Vector3( 5, 3.2, 9.3 ) ]
}

[sub_resource type="Animation" id=3]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Spaceship:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spaceship:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 5, 3.2, 9.3 ), Vector3( 5, 3.8, 9.3 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Spatial/Spaceship/Character:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -9, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "spin_y"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Spatial/Spaceship/Character:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -9, 0, 0 ), Vector3( -9, 720, 0 ) ]
}

[node name="TitleScreen" type="Node"]
script = ExtResource( 5 )
new_game_scene = ExtResource( 4 )

[node name="AnimationPlayerMenu" type="AnimationPlayer" parent="."]
autoplay = "menu_fade_in"
anims/RESET = SubResource( 4 )
anims/menu_fade_in = SubResource( 5 )
anims/menu_fade_out = SubResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -520.0
margin_top = -295.5
margin_right = 520.0
margin_bottom = 295.5

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1040.0
margin_bottom = 183.0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 187.0
margin_right = 1040.0
margin_bottom = 521.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 518.0
margin_bottom = 334.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 10 )]
margin_top = 17.0
margin_right = 518.0
margin_bottom = 77.0

[node name="ContinueButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 97.0
margin_right = 518.0
margin_bottom = 157.0

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 9 )]
margin_top = 177.0
margin_right = 518.0
margin_bottom = 237.0

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 257.0
margin_right = 518.0
margin_bottom = 317.0

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
self_modulate = Color( 1, 1, 1, 0.909091 )
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 334.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 259.0
margin_top = 167.0
margin_right = 259.0
margin_bottom = 167.0

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 525.0
margin_right = 1040.0
margin_bottom = 556.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 7 )
text = "DEMO RELEASE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DevelopedBy" type="Label" parent="Menu"]
margin_top = 560.0
margin_right = 1040.0
margin_bottom = 591.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 7 )
text = "DEVELOPED BY TELMO \"TROOPER\""
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spatial" type="Spatial" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Spatial"]
environment = ExtResource( 1 )

[node name="Camera" type="Camera" parent="Spatial"]
transform = Transform( 2.98023e-08, 0, -1, 0, 1, 0, 1, 0, 2.98023e-08, -13.2946, 6.29957, 0 )
current = true

[node name="AnimationPlayerSkybox" type="AnimationPlayer" parent="Spatial"]
autoplay = "rotating_skybox"
playback_speed = 0.2
anims/rotating_skybox = SubResource( 2 )

[node name="AnimationPlayerSpaceship" type="AnimationPlayer" parent="Spatial"]
autoplay = "coming_in"
anims/RESET = SubResource( 6 )
anims/coming_in = SubResource( 7 )
anims/flying_in_space = SubResource( 3 )

[node name="AnimationPlayerAlien" type="AnimationPlayer" parent="Spatial"]
root_node = NodePath("../..")
anims/RESET = SubResource( 8 )
anims/spin_y = SubResource( 9 )

[node name="DirectionalLight" type="DirectionalLight" parent="Spatial"]
transform = Transform( -0.183013, 0.965926, -0.183013, 0.683013, 0.258819, 0.683013, 0.707107, 0, -0.707107, 0, 0, 0 )

[node name="Spaceship" parent="Spatial" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 3.2, 9.3 )

[node name="Character" parent="Spatial/Spaceship" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 0.987688, 0.156434, 0, -0.156434, 0.987688, 0, 1.4, 0 )

[connection signal="animation_finished" from="AnimationPlayerMenu" to="." method="_on_AnimationPlayerMenu_animation_finished"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_Button_pressed" binds= [ "new_game" ]]
[connection signal="pressed" from="Menu/CenterRow/Buttons/ExitButton" to="." method="_on_Button_pressed" binds= [ "exit" ]]
[connection signal="gui_input" from="Menu/CenterRow/CenterContainer" to="." method="_on_CenterContainer_gui_input"]
[connection signal="animation_finished" from="Spatial/AnimationPlayerSpaceship" to="." method="_on_AnimationPlayerSpaceship_animation_finished"]
